crates/cli/tests/integration/snapshots/integration__summary_mark_tests__summary_mark_audit_warn.snap
---
source: crates/cli/tests/integration/summary_mark_tests.rs
expression: summary_lines(&output)
---
⚠ 1 export ([ELAPSED])
⚠ 1 above threshold · 1 analyzed ([ELAPSED])
⚠ dead code: 1 issue · complexity: 1 finding (warn) · 2 changed files ([ELAPSED])
