crates/cli/tests/integration/snapshots/integration__summary_mark_tests__summary_mark_combined_fail_on_issues.snap
---
source: crates/cli/tests/integration/summary_mark_tests.rs
expression: summary_lines(&output)
---
✗ 1 export ([ELAPSED])
✓ No code duplication found ([ELAPSED])
✗ 1 above threshold · 1 analyzed · maintainability 86.4 (good) ([ELAPSED])
