crates/cli/tests/integration/snapshots/integration__summary_mark_tests__summary_mark_dead_code_summary_warn.snap
---
source: crates/cli/tests/integration/summary_mark_tests.rs
expression: summary_lines(&output)
---
⚠ 1 issue ([ELAPSED])
