crates/cli/tests/integration/snapshots/integration__summary_mark_tests__summary_mark_dupes_summary_warn.snap
---
source: crates/cli/tests/integration/summary_mark_tests.rs
expression: summary_lines(&output)
---
⚠ 66.7% duplication ([ELAPSED])
