crates/cli/tests/integration/snapshots/integration__summary_mark_tests__summary_mark_dupes_warn.snap
---
source: crates/cli/tests/integration/summary_mark_tests.rs
expression: summary_lines(&output)
---
⚠ 12 lines (66.7%) duplicated across 2 files ([ELAPSED])
